--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
 	"compilerOptions": {
+		"outDir": "tmp/js/",
+		"sourceMap": true,
 		"strictNullChecks": true,
-		"outDir": "tmp/js/"
+		"target": "ES6"
 	}
 }
