--- a/package.json
+++ b/package.json
@@ -1,56 +1,7 @@
 {
-  "name": "aedris",
-  "version": "1.0.0",
-  "description": "",
-  "main": "lib/Aedris",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint \"**\""
-  },
-  "author": "opl",
-  "license": "MIT",
+  "name": "root",
+  "private": true,
   "devDependencies": {
-    "@babel/core": "^7.5.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/koa": "^2.0.49",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-router": "^7.0.42",
-    "@typescript-eslint/eslint-plugin": "^2.0.0",
-    "@typescript-eslint/parser": "^2.0.0",
-    "autoprefixer": "^9.6.1",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "copy-webpack-plugin": "^4.6.0",
-    "css-loader": "^2.1.1",
-    "eslint": "^6.2.1",
-    "eslint-config-airbnb-base": "^14.0.0",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-import-resolver-webpack": "^0.11.1",
-    "eslint-loader": "^2.2.1",
-    "eslint-plugin-html": "^5.0.5",
-    "eslint-plugin-import": "^2.18.2",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "markup-inline-loader": "^0.2.2",
-    "mini-css-extract-plugin": "^0.5.0",
-    "typescript": "^3.5.3",
-    "vue-loader": "^15.7.1",
-    "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "webpack-merge": "^4.2.1",
-    "webpack-node-externals": "^1.7.2"
-  },
-  "dependencies": {
-    "koa": "^2.8.1",
-    "koa-bodyparser": "^4.2.1",
-    "koa-router": "^7.4.0",
-    "vue-router": "^3.1.2",
-    "vue-server-renderer": "^2.6.10"
-  },
-  "peerDependencies": {
-    "vue": "^2.6.4",
-    "vue-template-compiler": "^2.6.4"
+    "lerna": "^3.15.0"
   }
 }
