--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -43,7 +43,7 @@
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
     "webpack": "^4.39.1",
-    "webpack-merge": "^4.2.2",
+    "webpack-chain": "^6.0.0",
     "webpack-virtual-modules": "^0.1.12",
     "yargs": "^13.0.2"
   },
@@ -54,7 +54,6 @@
     "@types/node": "^12.7.2",
     "@types/tapable": "^1.0.4",
     "@types/webpack": "^4.39.1",
-    "@types/webpack-merge": "^4.1.5",
     "@types/yargs": "^13.0.2"
   }
 }
