--- a/packages/build-tools/tsconfig.json
+++ b/packages/build-tools/tsconfig.json
@@ -1,6 +1,7 @@
 {
 	"compilerOptions": {
 		"module": "commonjs",
+		"target": "es6",
 		"noImplicitAny": true,
 		"alwaysStrict": true,
 		"strictNullChecks": true,
