--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -35,8 +35,7 @@
     "vue-loader": "^15.7.1",
     "vue-router": "^3.1.2",
     "vue-server-renderer": "^2.6.10",
-    "vue-template-compiler": "^2.6.10",
-    "webpack-merge": "^4.2.2"
+    "vue-template-compiler": "^2.6.10"
   },
   "devDependencies": {
     "@aedris/build-tools": "^0.1.0",
