--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@aedris/framework",
+  "name": "@aedris/vue",
   "version": "0.1.0",
-  "description": "The Vue and Koa based web framework.",
+  "description": "Aedris plugin adding support for Vue components.",
   "author": "opl- <opl-@users.noreply.github.com>",
   "homepage": "https://github.com/opl-/aedris#readme",
   "license": "MIT",
@@ -18,8 +18,6 @@
     "url": "git+https://github.com/opl-/aedris.git"
   },
   "scripts": {
-    "prepare": "npm run lint && npm run build",
-    "prestart": "npm run build",
     "lint": "eslint --ext .js,.ts lib/",
     "build": "aedris run build",
     "test": "echo \"Error: run tests from root\" && exit 1"
@@ -28,21 +26,17 @@
     "url": "https://github.com/opl-/aedris/issues"
   },
   "dependencies": {
-    "@aedris/vue": "^0.1.0",
-    "@types/koa": "^2.0.49",
-    "koa": "^2.8.1",
-    "tapable": "^1.1.3",
-    "vue-router": "^3.1.2"
+    "vue-loader": "^15.7.1"
   },
   "devDependencies": {
     "@aedris/build-tools": "^0.1.0",
-    "@aedris/eslint-config-vue": "^1.0.0",
-    "vue": "^2.6.10",
+    "@aedris/eslint-config": "^1.0.0",
     "vue-server-renderer": "^2.6.10"
   },
   "peerDependencies": {
     "@aedris/build-tools": "^0.1.0",
     "vue": "^2.6.10",
-    "vue-server-renderer": "^2.6.10"
+    "vue-server-renderer": "^2.6.10",
+    "vue-template-compiler": "^2.6.10"
   }
 }
