--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "prepare": "npm run lint && npm run build",
     "prestart": "npm run build",
-    "lint": "eslint --ext .js,.ts lib/",
+    "lint": "eslint --ext .js,.ts lib/ frontend/ backend/",
     "build": "aedris run build",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
