--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -39,7 +39,7 @@
     "tapable": "^1.1.3",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.3.0",
-    "typescript": "^3.7.2",
+    "typescript": "~3.7.2",
     "webpack": "^4.39.1",
     "webpack-chain": "^6.0.0",
     "webpack-virtual-modules": "^0.1.12",
