--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -27,14 +27,19 @@
   },
   "dependencies": {
     "@aedris/vue": "^0.1.0",
-    "@types/koa": "^2.0.49",
+    "cottage": "^3.1.3",
     "koa": "^2.8.1",
+    "koa-compose": "^4.1.0",
+    "koa-static": "^5.0.0",
     "tapable": "^1.1.3",
     "vue-router": "^3.1.2"
   },
   "devDependencies": {
     "@aedris/build-tools": "^0.1.0",
     "@aedris/eslint-config-vue": "^1.0.0",
+    "@types/koa": "^2.0.52",
+    "@types/koa-compose": "^3.2.5",
+    "@types/koa-static": "^4.0.1",
     "vue": "^2.6.10",
     "vue-server-renderer": "^2.6.10"
   },
