--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "lint": "eslint --ext .js,.ts lib/",
-    "build": "aedris run build",
+    "build": "aedris build",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "bugs": {
