--- a/packages/framework/tsconfig.json
+++ b/packages/framework/tsconfig.json
@@ -15,7 +15,7 @@
 	"include": [
 		"lib/**/*.ts",
 		"lib/buildSelf.ts",
-		"extend-types.d.ts"
+		"lib/extend-types.ts"
 	],
 	"exclude": [
 		"node_modules"
