--- a/packages/framework/package.json
+++ b/packages/framework/package.json
@@ -26,6 +26,7 @@
     "url": "https://github.com/opl-/aedris/issues"
   },
   "dependencies": {
+    "@aedris/plugin-hmr": "^0.1.0",
     "@aedris/vue": "^0.1.0",
     "cottage": "^3.1.3",
     "koa": "^2.8.1",
@@ -41,7 +42,8 @@
     "@types/koa-compose": "^3.2.5",
     "@types/koa-static": "^4.0.1",
     "vue": "^2.6.10",
-    "vue-server-renderer": "^2.6.10"
+    "vue-server-renderer": "^2.6.10",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "peerDependencies": {
     "@aedris/build-tools": "^0.1.0",
