--- a/packages/build-tools/package.json
+++ b/packages/build-tools/package.json
@@ -31,6 +31,7 @@
   },
   "dependencies": {
     "@types/webpack-virtual-modules": "^0.1.0",
+    "css-loader": "^3.2.1",
     "debug": "^4.1.1",
     "find-up": "^4.1.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
