--- a/packages/framework-koa/package.json
+++ b/packages/framework-koa/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@aedris/framework",
+  "name": "@aedris/framework-koa",
   "version": "0.1.0",
-  "description": "The Vue and Koa based web framework.",
+  "description": "Koa boilerplate for Aedris projects.",
   "author": "opl- <opl-@users.noreply.github.com>",
-  "homepage": "https://github.com/opl-/aedris#readme",
+  "homepage": "https://github.com/opl-/aedris/packages/framework-koa#readme",
   "license": "MIT",
   "main": "dist/build.js",
   "directories": {
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/opl-/aedris.git"
   },
   "scripts": {
-    "lint": "eslint --ext .js,.ts lib/ frontend/ backend/",
+    "lint": "eslint --ext .js,.ts lib/",
     "build": "aedris build",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
@@ -27,27 +27,21 @@
   },
   "dependencies": {
     "@aedris/plugin-hmr": "^0.1.0",
-    "@aedris/vue": "^0.1.0",
     "cottage": "^3.1.3",
     "koa": "^2.8.1",
     "koa-compose": "^4.1.0",
     "koa-static": "^5.0.0",
-    "tapable": "^1.1.3",
-    "vue-router": "^3.1.2"
+    "tapable": "^1.1.3"
   },
   "devDependencies": {
     "@aedris/build-tools": "^0.1.0",
-    "@aedris/eslint-config-vue": "^1.0.0",
+    "@aedris/eslint-config": "^1.0.0",
     "@types/koa": "^2.0.52",
     "@types/koa-compose": "^3.2.5",
     "@types/koa-static": "^4.0.1",
-    "vue": "^2.6.10",
-    "vue-server-renderer": "^2.6.10",
     "webpack-hot-middleware": "^2.25.0"
   },
   "peerDependencies": {
-    "@aedris/build-tools": "^0.1.0",
-    "vue": "^2.6.10",
-    "vue-server-renderer": "^2.6.10"
+    "@aedris/build-tools": "^0.1.0"
   }
 }
