--- a/packages/framework-koa/package.json
+++ b/packages/framework-koa/package.json
@@ -38,8 +38,7 @@
     "@aedris/eslint-config": "^1.0.0",
     "@types/koa": "^2.0.52",
     "@types/koa-compose": "^3.2.5",
-    "@types/koa-static": "^4.0.1",
-    "webpack-hot-middleware": "^2.25.0"
+    "@types/koa-static": "^4.0.1"
   },
   "peerDependencies": {
     "@aedris/build-tools": "^0.1.0"
