--- a/packages/glue-koa-vue/package.json
+++ b/packages/glue-koa-vue/package.json
@@ -28,7 +28,10 @@
   "dependencies": {
     "@aedris/plugin-hmr": "^0.1.0",
     "@aedris/framework-koa": "^0.1.0",
-    "@aedris/framework-vue": "^0.1.0"
+    "@aedris/framework-vue": "^0.1.0",
+    "koa": "^2.8.1",
+    "tapable": "^1.1.3",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "devDependencies": {
     "@aedris/build-tools": "^0.1.0",
@@ -37,8 +40,7 @@
     "@types/koa-compose": "^3.2.5",
     "@types/koa-static": "^4.0.1",
     "vue": "^2.6.10",
-    "vue-server-renderer": "^2.6.10",
-    "webpack-hot-middleware": "^2.25.0"
+    "vue-server-renderer": "^2.6.10"
   },
   "peerDependencies": {
     "@aedris/build-tools": "^0.1.0",
