Remove unnecessary include values from tsconfig.json

--- a/packages/glue-koa-vue/tsconfig.json
+++ b/packages/glue-koa-vue/tsconfig.json
@@ -13,9 +13,7 @@
 		"moduleResolution": "node"
 	},
 	"include": [
-		"lib/**/*.ts",
-		"lib/buildSelf.ts",
-		"lib/extend-types.ts"
+		"lib/**/*.ts"
 	],
 	"exclude": [
 		"node_modules"
