--- a/packages/plugin-hmr/tsconfig.json
+++ b/packages/plugin-hmr/tsconfig.json
@@ -13,8 +13,7 @@
 		"moduleResolution": "node"
 	},
 	"include": [
-		"lib/**/*",
-		"lib/extend-types.ts"
+		"lib/**/*"
 	],
 	"exclude": [
 		"node_modules"
