Fix package.json lint scripts include wrong directories

--- a/packages/glue-koa-vue/package.json
+++ b/packages/glue-koa-vue/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/opl-/aedris.git"
   },
   "scripts": {
-    "lint": "eslint --ext .js,.ts lib/ frontend/ backend/",
+    "lint": "eslint --ext .js,.ts lib/ backend/",
     "build": "aedris build",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
