--- a/packages/framework-vue/package.json
+++ b/packages/framework-vue/package.json
@@ -18,7 +18,7 @@
     "url": "git+https://github.com/opl-/aedris.git"
   },
   "scripts": {
-    "lint": "eslint --ext .js,.ts lib/",
+    "lint": "eslint --ext .js,.ts lib/ frontend/",
     "build": "aedris build",
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
