--- a/packages/framework-koa/tsconfig.json
+++ b/packages/framework-koa/tsconfig.json
@@ -1,20 +1,1 @@
-{
-	"compilerOptions": {
-		"module": "commonjs",
-		"target": "es6",
-		"noImplicitAny": true,
-		"alwaysStrict": true,
-		"strictNullChecks": true,
-		"preserveConstEnums": true,
-		"esModuleInterop": true,
-		"outDir": "./dist/",
-		"sourceMap": true,
-		"declaration": true
-	},
-	"include": [
-		"lib/**/*"
-	],
-	"exclude": [
-		"node_modules"
-	]
-}
+../../tsconfig.json
