eslint-config: Use eslint-config-airbnb-typescript for Airbnb-compliant TS plugin rules

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -22,8 +22,9 @@
   },
   "dependencies": {
     "@aedris/eslint-config-vanilla": "^1.0.0",
-    "@typescript-eslint/eslint-plugin": "^2.8.0",
-    "@typescript-eslint/parser": "^2.8.0"
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "eslint-config-airbnb-typescript": "^8.0.2"
   },
   "devDependencies": {
     "typescript": "^3.7.2"
