Fix version ranges for the TypeScript dependency

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -27,9 +27,9 @@
     "eslint-config-airbnb-typescript": "^8.0.2"
   },
   "devDependencies": {
-    "typescript": "^3.9.6"
+    "typescript": "~3.9.6"
   },
   "peerDependencies": {
-    "typescript": "^3.9.6"
+    "typescript": ">=3.9.6"
   }
 }
