--- a/packages/framework-koa/package.json
+++ b/packages/framework-koa/package.json
@@ -27,18 +27,16 @@
   },
   "dependencies": {
     "@aedris/plugin-hmr": "^0.1.0",
-    "cottage": "^3.1.3",
     "koa": "^2.8.1",
-    "koa-compose": "^4.1.0",
-    "koa-static": "^5.0.0",
+    "koa-butterfly": "^0.1.1",
+    "koa-send": "^5.0.1",
     "tapable": "^1.1.3"
   },
   "devDependencies": {
     "@aedris/build-tools": "^0.1.0",
     "@aedris/eslint-config": "^1.0.0",
-    "@types/koa": "^2.0.52",
-    "@types/koa-compose": "^3.2.5",
-    "@types/koa-static": "^4.0.1"
+    "@types/koa": "^2.11.6",
+    "@types/koa-send": "^4.1.2"
   },
   "peerDependencies": {
     "@aedris/build-tools": "^0.1.0"
